--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
   </head>
   <body>
     <h1>I am a PWA PG</h1>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("/sw.js").then(
+          (registration) => {
+            console.log("Service worker registration succeeded:", registration);
+          },
+          (error) => {
+            console.error(`Service worker registration failed: ${error}`);
+          },
+        );
+      } else {
+        console.error("Service workers are not supported.");
+      }
+    </script>
   </body>
 </html>
