--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
-    <h1>I am a PWA PG v2</h1>
+    <h1>I am a PWA PG v3 (Blue)</h1>
     <script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("/sw.js").then(
